# gzdoom

./: .appveyor.yml  .clang-format  .editorconfig  .gitattributes  .gitignore  .gitmodules  .travis.yml  AppImageBuilder.yml  CMakeLists.txt  CMakeSettings.json  CONTRIBUTORS  CreateLaunchers.cmake  Dev-C++.txt  FindFluidSynth.cmake  FindMPG123.cmake  FindSDL_sound.cmake  INSTALL  Makefile  Makefile.linux  Makefile.mgw  Makefile.mingw  README  README.md  README.txt  SECURITY.md  auto-setup-linux.sh  auto-setup-windows-arm.cmd  auto-setup-windows.cmd  bootstrap  cbuild.c  ccdv-posix.c  ccdv-win32.c  colors  commands  configure.ac  default.cbd  externs.txt  get-fmodex-for-linux.sh  gzdoom.sln  gzdoom.vcproj  (+24 more)
bzip2/: CMakeLists.txt  bzip2.vcproj  bzip2.vcxproj  bzip2.vcxproj.filters  bzlib.c  bzlib.h  compress.c
dumb/: CMakeLists.txt  ChangeLog  Makefile  licence.txt  readme.txt  release.txt  todo.txt
dumb/cmake/: CMakeLists.txt
dumb/docs/: deprec.txt  duhspecs.txt  dumb.txt  dumbfull.txt  faq.txt  fnptr.txt  howto.txt  modplug.txt  ptr.txt  tutorial.txt
dumb/examples/: dumb2wav.c  dumbout.c  dumbplay.c  playduh.c
dumb/include/: dumb.h
dumb/prj/: .gitignore
ext/game-music-emu/: CMakeLists.txt  gme.txt  readme.txt
ext/jpeg-6b/: CMakeLists.txt  jconfig.h  jdatasrc.c  jdcolor.c  jdct.h  jddctmgr.c  jdhuff.h  jdmerge.c  jdpostct.c  jerror.c  jmorecfg.h  jutils.c
game-music-emu/: CMakeLists.txt  changes.txt  design.txt  game-music-emu.vcproj  game-music-emu.vcxproj  game-music-emu.vcxproj.filters  gme.txt  readme.txt
game-music-emu/gme/: Ay_Apu.cpp  Ay_Apu.h  Ay_Cpu.cpp  Ay_Cpu.h  Ay_Emu.cpp  Ay_Emu.h  Blip_Buffer.cpp  CMakeLists.txt  Classic_Emu.cpp  Classic_Emu.h  Data_Reader.cpp  Data_Reader.h  Dual_Resampler.cpp  Dual_Resampler.h  Effects_Buffer.cpp  Effects_Buffer.h  Fir_Resampler.cpp  Fir_Resampler.h  Gb_Apu.cpp  Gb_Cpu.cpp  Gb_Cpu.h  Gbs_Emu.cpp  Gbs_Emu.h  Gme_File.cpp  Gme_File.h  Gym_Emu.cpp  Gym_Emu.h  Hes_Apu.cpp  Hes_Apu.h  Hes_Cpu.cpp  Hes_Cpu.h  Hes_Emu.cpp  Hes_Emu.h  Kss_Cpu.cpp  Kss_Cpu.h  Kss_Emu.cpp  Kss_Emu.h  Kss_Scc_Apu.cpp  Kss_Scc_Apu.h  M3u_Playlist.cpp  (+54 more)
gdtoa/: CMakeLists.txt  README  arithchk.c  dmisc.c  dtoa.c  g_Qfmt.c  g_ddfmt.c  g_dfmt.c  g_ffmt.c  g_xLfmt.c  g_xfmt.c  gdtoa.c  gdtoa.h  gdtoa.vcproj  gdtoa.vcxproj  gdtoa.vcxproj.filters  gdtoaimp.h  gethex.c  gmisc.c  hexnan.c  misc.c  smisc.c  strtoIQ.c  strtoId.c  strtoIdd.c  strtoIf.c  strtoIg.c  strtoIx.c  strtoIxL.c  strtod.c  strtodI.c  strtodg.c  strtodnrp.c  strtof.c  strtopQ.c  strtopd.c  strtopdd.c  strtopf.c  strtopx.c  strtopxL.c  (+7 more)
glslang/glslang/: CMakeLists.txt
glslang/spirv/: CMakeLists.txt
jpeg/: CMakeLists.txt  jconfig.h  jconfigint.h  readme-zdoom.txt
jpeg-6b/: CMakeLists.txt  Makefile.mgw  jcomapi.c  jdapimin.c  jdapistd.c  jdcoefct.c  jdhuff.c  jdinput.c  jdmainct.c  jdmarker.c  jdmaster.c  jdphuff.c  jdsample.c  jerror.h  jidctint.c  jmemmgr.c  jpeg-6b.vcproj  jpeg-6b.vcxproj  jpeg-6b.vcxproj.filters  jpegint.h  jpeglib.h  readme-zdoom.txt
libraries/: CMakeLists.txt
libraries/ZMusic/: .gitignore  CMakeLists.txt  README.md  vcpkg.json
libraries/ZVulkan/: CMakeLists.txt  LICENSE.md  README.md
libraries/ZWidget/: CMakeLists.txt  LICENSE.md  README.md
libraries/adlmidi/: CMakeLists.txt  adldata.hh  adlmidi.cpp  adlmidi.hpp  adlmidi_bankmap.h  adlmidi_bankmap.tcc  adlmidi_cvt.hpp  adlmidi_midiplay.cpp  adlmidi_private.hpp  adlmidi_ptr.hpp
libraries/asmjit/: CMakeLists.txt
libraries/bzip2/: CMakeLists.txt
libraries/cppdap/: .gitattributes  CMakeLists.txt  README.md  clang-format-all.sh  license-checker.cfg
libraries/discordrpc/: CMakeLists.txt
libraries/dp_rect_pack/: dp_rect_pack.h
libraries/dumb/: CMakeLists.txt
libraries/eventpp/: .gitignore  CMakeLists.txt  readme.md
libraries/game-music-emu/: CMakeLists.txt
libraries/gdtoa/: CMakeLists.txt  dtoa.c  g_Qfmt.c  g_dfmt.c  g_xLfmt.c  gdtoa.h  gdtoaimp.h  hexnan.c  misc.c  qnan.c  strtord.c  strtordd.c  strtorxL.c
libraries/jpeg/: CMakeLists.txt  jconfig.h
libraries/libavif/: CMakeLists.txt
libraries/lzma/: CMakeLists.txt
libraries/miniz/: CMakeLists.txt
libraries/music_common/: fileio.h
libraries/oplsynth/: CMakeLists.txt  OPL3.cpp  fmopl.cpp  opl_mus_player.cpp  oplio.cpp
libraries/opnmidi/: CMakeLists.txt  file_reader.hpp  opnmidi.cpp  opnmidi.h  opnmidi_bankmap.h  opnmidi_bankmap.tcc  opnmidi_cvt.hpp  opnmidi_load.cpp  opnmidi_private.cpp  opnmidi_ptr.hpp
libraries/timidity/: CMakeLists.txt  common.cpp  instrum.cpp  instrum_dls.cpp  instrum_font.cpp  instrum_sf2.cpp  mix.cpp  playmidi.cpp  resample.cpp  timidity.cpp
libraries/timidityplus/: CMakeLists.txt  common.cpp  configfile.cpp  effect.cpp  fft4g.cpp  freq.cpp  instrum.cpp  mix.cpp  playmidi.cpp  quantity.cpp  readmidic.cpp  resample.cpp  reverb.cpp  sffile.cpp  smplfile.cpp  sndfont.cpp  tables.cpp
libraries/webp/: CMakeLists.txt  sharpyuv.txt
libraries/wildmidi/: CMakeLists.txt  file_io.cpp  gus_pat.cpp  reverb.cpp  wildmidi_lib.cpp  wm_error.cpp
libraries/zlib/: CMakeLists.txt
lzma/: CMakeLists.txt  history.txt  lzma.txt  lzmalib.vcproj  lzmalib.vcxproj  lzmalib.vcxproj.filters
output_sdl/: CMakeLists.txt  output_sdl.c
snes_spc/: CMakeLists.txt  Makefile  changes.txt  readme.txt  snes_spc.txt  snes_spc.vcproj
src/: CMakeLists.txt  Copy of c_cvars.cpp  Copy of p_map.cpp  GuillotineBinPack.cpp  Makefile.am  SkylineBinPack.cpp  SkylineBinPack.h  __autostart.cpp  a.nas  actionspecials.h  actor.h  actorinlines.h  actorptrselect.cpp  actorptrselect.h  am_map.cpp  am_map.h  announcer.h  auto3.zds  autosegs.h  autostart.cpp  autozend.cpp  b_bot.cpp  b_bot.h  b_func.cpp  b_game.cpp  b_move.cpp  b_node.cpp  b_think.cpp  basicinlines.h  basictypes.h  bbannouncer.cpp  blocks.nas  c_bind.cpp  c_bind.h  c_cmds.cpp  c_console.cpp  c_console.h  c_consolebuffer.cpp  c_consolebuffer.h  c_cvars.cpp  (+470 more)
tools/: AppImageBuilder.yml  CMakeLists.txt  DelLLVMCache.cmd  fix-llvm-3.8-ubuntu.sh  update-subtrees.cmd  update-subtrees.sh
zlib/: CMakeLists.txt  Makefile.mgw  zlib.vcproj  zlib.vcxproj  zlib.vcxproj.filters  zutil.h
(+10406 files in other folders)
